--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 </head>
 <body>
    <div class="container">
-       <div class="panel active" style="background-image: url('https://images.wallpaperscraft.com/image/piano_keys_music_186888_1920x1080.jpg');">
+       <div class="panel active" style="background-image: url('assests/piano.jpg');">
             <h3>Composing</h3>
        </div>
 
-       <div class="panel" style="background-image: url('https://images.wallpaperscraft.com/image/guitar_hand_mediator_guitare_110153_1920x1080.jpg');">
+       <div class="panel" style="background-image: url('assests/guitar.jpg');">
            <h3>Arranging</h3>
         </div>
     
-        <div class="panel" style="background-image: url('https://images.wallpaperscraft.com/image/microphone_device_music_143960_1920x1080.jpg');">
+        <div class="panel" style="background-image: url('assests/record.jpg');">
             <h3>Recording</h3>
         </div>
 
-        <div class="panel" style="background-image: url('https://images.wallpaperscraft.com/image/dj_music_disco_173199_1920x1080.jpg');">
+        <div class="panel" style="background-image: url('assests/mixer.jpg');">
             <h3>Mixing</h3>
         </div>
 
-        <div class="panel" style="background-image: url('https://images.wallpaperscraft.com/image/drum_kit_instrument_musical_instrument_160881_1920x1080.jpg');">
+        <div class="panel" style="background-image: url('assests/rehearsal.jpg');">
             <h3>Rehearsing</h3>
         </div>
 
